--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </div>
 
     <!-- Process Section -->
+
     <div class="supporting" id="process">
       <h2>Our Process</h2>
       <div class="supporting-item">
@@ -37,5 +38,46 @@
       </div>
     </div>
 
+    <!-- Information -->
+
+    <div class="hero">
+      <h2>Designed in New York</h2>
+    </div>
+
+    <div class="supporting" id="work">
+      <div class="supporting-item">
+        <h3>Portfolio</h3>
+        <p>Coming Soon</p>
+      </div>
+    </div>
+
+    <div class="supporting" id="team">
+      <div class="supporting-item">
+        <h3>Team</h3>
+        <p>We're Hiring!</p>
+      </div>
+    </div>
+
+    <div class="supporting" id="contact">
+      <div class="supporting-item">
+        <h3>Contact</h3>
+        <p>Phone: (555)-555-5555</p>
+        <p>E-mail: test@example.com</p>
+        <p>Twitter: @test</p>
+      </div>
+    </div>
+
+    <!-- Footer Section -->
+
+    <div class="footer">
+      <p>
+        © Broadway 2017
+        <a class="btn-nav" href="#">Home</a>
+        <a class="btn-nav" href="#about">About</a>
+        <a class="btn-nav" href="#work">Work</a>
+        <a class="btn-nav" href="#team">Team</a>
+        <a class="btn-nav" href="#contact">Contact</a>
+      </p>
+    </div>
   </body>
 </html>
